5-day forecast added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <nav class="navbar sticky-top navbar-light bg-light">
+        <nav class="navbar sticky-top navbar-dark bg-dark">
             <a class="navbar-brand navbar-text" href="#" style="margin:0 auto">Weather Dashboard</a>
         </nav>
     </header>
@@ -31,11 +31,14 @@
                     <div class="col-md-12" id="current-weather"></div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2 future-weather"></div>
-                    <div class="col-md-2 future-weather"></div>
-                    <div class="col-md-2 future-weather"></div>
-                    <div class="col-md-2 future-weather"></div>
-                    <div class="col-md-2 future-weather"></div>
+                    <div class = "col-md-12" id="fivedayheader"></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2 day0"></div>
+                    <div class="col-md-2 day1"></div>
+                    <div class="col-md-2 day2"></div>
+                    <div class="col-md-2 day3"></div>
+                    <div class="col-md-2 day4"></div>
                 </div>
             </div>
         </div>
